tests/rosetta/out/Zig/99-bottles-of-beer-2.error
zig build error: exit status 1
/tmp/TestMochiZigGolden99-bottles-of-beer-21808495257/001/prog.zig:164:5: error: redeclaration of 'main'
/tmp/TestMochiZigGolden99-bottles-of-beer-21808495257/001/prog.zig:153:1: note: other declaration here
/tmp/TestMochiZigGolden99-bottles-of-beer-21808495257/001/prog.zig:22:20: error: use of undeclared identifier 'substring'
/tmp/TestMochiZigGolden99-bottles-of-beer-21808495257/001/prog.zig:95:13: error: local variable is never mutated
/tmp/TestMochiZigGolden99-bottles-of-beer-21808495257/001/prog.zig:95:13: note: consider using 'const'
/tmp/TestMochiZigGolden99-bottles-of-beer-21808495257/001/prog.zig:127:176: error: use of undeclared identifier 'substring'
